Ready for experiments to run